--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-datasource-rest": "^3.4.0",
     "apollo-server": "^2.2.2",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.1"
+  },
+  "engines": {
+    "node": "16.6.1"
   }
 }
